# semantic-nerfacto

./: .gitignore  README.md  pyproject.toml
semantic_nerfacto/: custom_camera_path.py  detectron.py  semantic_datamanager.py  semantic_dataparser.py  semantic_dataset.py  semantic_depth_dataset.py  semantic_depth_nerfacto.py  semantic_depth_nerfacto_pipeline.py  semantic_nerfacto.py  semantic_nerfacto_config.py  semantic_nerfacto_datamanager.py  semantic_nerfacto_pipeline.py  visualizations.py
semantic_nerfacto/Pipeline/: download_gdrive.py  nerf_process.py
semantic_nerfacto/utils/: random_train_pose.py
teton_nerf/: semantic_dataparser.py  semantic_depth_dataset.py  semantic_depth_nerfacto.py  semantic_depth_nerfacto_pipeline.py  semantic_nerfacto_datamanager.py  semantic_nerfacto_pipeline.py  teton_datamanager.py  teton_dataparser.py  teton_dataset.py  teton_nerf.py  teton_nerf_config.py  teton_nerf_pipeline.py  visualizations.py
teton_nerf/process_data/: polycam_confidence_utils.py  process_polycam.py
teton_nerf/processing_tools/: detectron.py  nerf_pipeline.py  nerf_process.py
teton_nerf/utils/: get_pointcloud.py
