[project]
name = "teton_nerf"
version = "1.0.0"

dependencies = [
    "nerfstudio>=1.0.0",
    "transformers>=4.39.2"
]

[tool.setuptools.packages.find]
include = ["teton_nerf*"]

[project.entry-points.'nerfstudio.method_configs']
semantic_nerfacto = 'teton_nerf.teton_nerf_config:semantic_nerfacto'
semantic_depth_nerfacto = 'teton_nerf.teton_nerf_config:semantic_depth_nerfacto'
teton_nerf = 'teton_nerf.teton_nerf_config:teton_nerf'
