[project]
name = "teton_nerf"
version = "1.0.0"

dependencies = [
    "nerfstudio>=1.0.0",
    "transformers>=4.39.2"
]

[tool.setuptools.packages.find]
include = ["teton_nerf*"]

[project.entry-points.'nerfstudio.method_configs']
teton_nerf = 'teton_nerf.teton_nerf_config:teton_nerf'

[project.scripts]
# Custom process-data script to include confidence maps when processing polycam data
ns-process-teton = "teton_nerf.process_data.process_polycam: entrypoint"
